--- a/index.html
+++ b/index.html
@@ -1,28 +1,142 @@
-<div class="grid">
-    <div class="item">
-        <img src="ippari002_01.png" alt="Ippari Purple">
-        <div class="item-info">
-            <h3>이파리 Purple</h3>
-            <p>Glitter Resin | 2024</p>
-            <a href="#" class="btn-buy">작품 상세 보기</a>
-        </div>
-    </div>
-    
-    <div class="item">
-        <img src="ippari001.png" alt="Ippari Black">
-        <div class="item-info">
-            <h3>이파리 Black</h3>
-            <p>Vinyl, Mixed Media | 2024</p>
-            <a href="#" class="btn-buy">작품 상세 보기</a>
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>아트토이 작가 포트폴리오</title>
+    <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.css" />
+    <style>
+        :root {
+            --point-color: #39FF14; 
+            --bg-color: #ffffff;
+            --text-main: #111111;
+            --text-sub: #666666;
+            --card-bg: #f9f9f9;
+        }
+
+        body {
+            margin: 0; padding: 0;
+            font-family: 'Pretendard', sans-serif;
+            background-color: var(--bg-color);
+            color: var(--text-main);
+        }
+
+        header {
+            padding: 20px 5%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            position: sticky;
+            top: 0;
+            background: rgba(255, 255, 255, 0.9);
+            backdrop-filter: blur(10px);
+            z-index: 100;
+            border-bottom: 1px solid #eee;
+        }
+
+        .logo { font-size: 1.4rem; font-weight: 800; }
+        nav a { color: var(--text-main); text-decoration: none; margin-left: 25px; font-size: 0.95rem; }
+
+        .hero {
+            height: 50vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        }
+
+        .hero h1 { font-size: 3rem; font-weight: 800; }
+        .hero h1 span { background-color: var(--point-color); padding: 0 10px; }
+
+        .container { padding: 50px 5%; max-width: 1200px; margin: 0 auto; }
+        .section-title { font-size: 1.8rem; margin-bottom: 40px; display: flex; align-items: center; gap: 15px; }
+        .section-title::before { content: ""; width: 40px; height: 4px; background-color: var(--point-color); }
+
+        .grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 30px;
+        }
+
+        .item {
+            background: var(--card-bg);
+            border-radius: 20px;
+            overflow: hidden;
+            border: 1px solid #eee;
+        }
+
+        .item img { 
+            width: 100%; 
+            height: auto; /* 이미지 비율 유지 */
+            display: block;
+        }
+
+        .item-info { padding: 25px; }
+        .item-info h3 { margin: 0; font-size: 1.2rem; }
+        .item-info p { color: var(--text-sub); margin: 10px 0; }
+
+        .btn-buy {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: var(--text-main);
+            color: #fff;
+            text-decoration: none;
+            border-radius: 50px;
+            font-size: 0.9rem;
+        }
+
+        footer { text-align: center; padding: 50px; background: #f1f1f1; color: #888; }
+    </style>
+</head>
+<body>
+
+    <header>
+        <div class="logo">JOOMOOL</div>
+        <nav>
+            <a href="#portfolio">포트폴리오</a>
+            <a href="#shop">판매 작품</a>
+        </nav>
+    </header>
+
+    <section class="hero">
+        <h1>Welcome to <span>My Universe</span></h1>
+        <p>작고 단단한 세계를 만드는 아트토이 작가 주물입니다.</p>
+    </section>
+
+    <div class="container" id="portfolio">
+        <h2 class="section-title">Latest Works</h2>
+        <div class="grid">
+            <div class="item">
+                <img src="ippari002_01.png" alt="Ippari Purple">
+                <div class="item-info">
+                    <h3>이파리 Purple</h3>
+                    <p>Glitter Resin | 2024</p>
+                </div>
+            </div>
+            
+            <div class="item">
+                <img src="ippari001.png" alt="Ippari Black">
+                <div class="item-info">
+                    <h3>이파리 Black</h3>
+                    <p>Vinyl Mixed Media | 2024</p>
+                </div>
+            </div>
+
+            <div class="item" id="shop">
+                <img src="angma_005.png" alt="Angma">
+                <div class="item-info">
+                    <h3>앙마 Pink</h3>
+                    <p>₩ 150,000 (Available)</p>
+                    <a href="#" class="btn-buy" style="background-color: var(--point-color); color: #000;">구매 문의하기</a>
+                </div>
+            </div>
         </div>
     </div>
 
-    <div class="item" id="shop">
-        <img src="angma_005.png" alt="Angma">
-        <div class="item-info">
-            <h3>한정판 앙마 (Pink)</h3>
-            <p>₩ 150,000 (구매 가능)</p>
-            <a href="#" class="btn-buy" style="background-color: var(--point-color); color: #000;">구매 문의하기</a>
-        </div>
-    </div>
-</div>
+    <footer>
+        &copy; 2024 JOOMOOL. All rights reserved.
+    </footer>
+
+</body>
+</html>
