--- a/index.html
+++ b/index.html
@@ -3,80 +3,120 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JOOMOOL - 작품 상세</title>
+    <title>JOOMOOL's Arttoy</title>
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.css" />
     <style>
-        :root { --point-color: #39FF14; --bg-color: #ffffff; --text-main: #111111; --text-sub: #666666; }
+        :root { --point-color: #39FF14; --bg-color: #ffffff; --text-main: #111111; --text-sub: #666666; --card-bg: #f9f9f9; }
         body { margin: 0; padding: 0; font-family: 'Pretendard', sans-serif; background-color: var(--bg-color); color: var(--text-main); line-height: 1.6; }
         
-        /* 헤더 스타일 (메인과 동일 유지) */
+        /* 헤더 및 메뉴 정렬 */
         header { padding: 20px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; background: rgba(255, 255, 255, 0.9); backdrop-filter: blur(10px); z-index: 100; border-bottom: 1px solid #eee; }
         .logo { font-size: 1.5rem; font-weight: 900; text-decoration: none; color: inherit; }
-        nav { display: flex; align-items: center; }
-        nav a { color: var(--text-main); text-decoration: none; margin-left: 25px; font-size: 0.9rem; font-weight: 600; transition: color 0.3s; }
-        nav a:hover { color: var(--point-color); }
-        .insta-icon { width: 20px; vertical-align: middle; }
-
-        /* 상세 페이지 레이아웃 */
-        .detail-container { padding: 60px 5%; max-width: 1000px; margin: 0 auto; }
         
-        /* 상단 메인 이미지 */
-        .main-visual { width: 100%; border-radius: 20px; overflow: hidden; margin-bottom: 40px; border: 1px solid #eee; }
-        .main-visual img { width: 100%; display: block; }
+        nav { display: flex; align-items: center; gap: 25px; }
+        .nav-item { position: relative; font-size: 0.9rem; font-weight: 600; cursor: pointer; }
+        .nav-item a { text-decoration: none; color: var(--text-main); transition: 0.3s; }
+        .nav-item a:hover { color: var(--point-color); }
 
-        /* 작품 정보 */
-        .info-section { margin-bottom: 60px; text-align: center; }
-        .info-section h1 { font-size: 2.5rem; margin-bottom: 10px; }
-        .info-section p { color: var(--text-sub); font-size: 1.1rem; }
-        .back-btn { display: inline-block; margin-top: 20px; padding: 10px 30px; background: #000; color: #fff; text-decoration: none; border-radius: 50px; font-weight: 600; transition: 0.3s; }
-        .back-btn:hover { background: var(--point-color); color: #000; }
-
-        /* 하단 스틸컷 그리드 */
-        .shots-title { font-size: 1.2rem; font-weight: 700; margin-bottom: 20px; display: flex; align-items: center; gap: 10px; }
-        .shots-title::before { content: ""; width: 20px; height: 4px; background: var(--point-color); }
-        .shots-grid { display: grid; grid-template-columns: repeat(2, 1fr); gap: 20px; }
-        .shots-grid img { width: 100%; border-radius: 15px; border: 1px solid #eee; }
-
-        footer { text-align: center; padding: 60px; color: #bbb; font-size: 0.8rem; }
-
-        /* 모바일 대응 */
-        @media (max-width: 768px) {
-            .shots-grid { grid-template-columns: 1fr; }
-            .info-section h1 { font-size: 1.8rem; }
+        /* CHARACTER 드롭다운 스타일 */
+        .dropdown {
+            position: absolute;
+            top: 100%;
+            left: 50%;
+            transform: translateX(-50%);
+            background: #fff;
+            border: 1px solid #eee;
+            border-radius: 8px;
+            min-width: 100px;
+            padding: 10px 0;
+            display: none; /* 평소에는 숨김 */
+            box-shadow: 0 5px 15px rgba(0,0,0,0.05);
         }
+        .dropdown a {
+            display: block;
+            padding: 8px 20px;
+            font-size: 0.85rem;
+            white-space: nowrap;
+        }
+        .nav-item:hover .dropdown { display: block; } /* 마우스 올리면 나타남 */
+
+        /* 인스타그램 아이콘 */
+        .insta-icon { width: 18px; height: 18px; vertical-align: middle; }
+
+        /* 기존 그리드 스타일 유지 */
+        .hero { height: 40vh; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; }
+        .hero h1 { font-size: 3rem; font-weight: 800; }
+        .hero h1 span { background-color: var(--point-color); padding: 0 10px; }
+        .container { padding: 40px 5%; max-width: 1200px; margin: 0 auto; }
+        .section-title { font-size: 1.5rem; margin-bottom: 30px; display: flex; align-items: center; gap: 10px; }
+        .section-title::before { content: ""; width: 30px; height: 4px; background-color: var(--point-color); }
+        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 20px; }
+        .item { background: var(--card-bg); border-radius: 15px; overflow: hidden; border: 1px solid #eee; text-decoration: none; color: inherit; transition: 0.3s; display: block; }
+        .item:hover { transform: translateY(-10px); }
+        .item img { width: 100%; height: auto; display: block; }
+        .item-info { padding: 20px; }
+        .btn-view { display: inline-block; padding: 8px 18px; background-color: var(--text-main); color: #fff; border-radius: 50px; font-size: 0.8rem; font-weight: 600; transition: 0.3s; }
+        .item:hover .btn-view { background-color: var(--point-color); color: #000; }
+
+        footer { text-align: center; padding: 40px; color: #bbb; font-size: 0.8rem; }
     </style>
 </head>
 <body>
     <header>
         <a href="index.html" class="logo">JOOMOOL</a>
         <nav>
-            <a href="index.html#portfolio">PORTFOLIO</a>
-            <a href="about.html">ABOUT</a>
-            <a href="contact.html">CONTACT</a>
-            <a href="https://instagram.com/joomool_joo" target="_blank">
-                <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram" class="insta-icon">
-            </a>
+            <div class="nav-item">
+                <a href="#">CHARACTER</a>
+                <div class="dropdown">
+                    <a href="char_ippari.html">ippari</a>
+                    <a href="char_angma.html">angma</a>
+                </div>
+            </div>
+            <div class="nav-item"><a href="about.html">ABOUT</a></div>
+            <div class="nav-item"><a href="contact.html">CONTACT</a></div>
+            <div class="nav-item"><a href="index.html#portfolio">PORTFOLIO</a></div>
+            <div class="nav-item">
+                <a href="https://instagram.com/joomool_joo" target="_blank">
+                    <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram" class="insta-icon">
+                </a>
+            </div>
         </nav>
     </header>
 
-    <div class="detail-container">
-        <div class="main-visual">
-            <img src="ippari001.png" alt="Main Shot"> </div>
+    <section class="hero">
+        <h1>JOOMOOL <span>Universe</span></h1>
+        <p>주물주물 작은 세계</p>
+    </section>
 
-        <div class="info-section">
-            <h1>이빠리 Black</h1> <p>Vinyl Mixed Media | 2024</p>
-            <a href="index.html" class="back-btn">목록으로 돌아가기</a>
+    <div class="container" id="portfolio">
+        <h2 class="section-title">Latest Works</h2>
+        <div class="grid">
+            <a href="ippari_black.html" class="item">
+                <img src="ippari001.png" alt="이빠리 Black">
+                <div class="item-info">
+                    <h3>이빠리 Black</h3>
+                    <p>Vinyl Mixed Media | 2024</p>
+                    <span class="btn-view">구경하기</span>
+                </div>
+            </a>
+            <a href="ippari_purple.html" class="item">
+                <img src="ippari002_01.png" alt="이빠리 Purple">
+                <div class="item-info">
+                    <h3>이빠리 Purple</h3>
+                    <p>Resin Art | 2024</p>
+                    <span class="btn-view">구경하기</span>
+                </div>
+            </a>
+            <a href="angma_red.html" class="item" id="shop">
+                <img src="angma_005.png" alt="앙마 Red">
+                <div class="item-info">
+                    <h3>앙마 Red (Limited)</h3>
+                    <p>₩ 150,000</p>
+                    <span class="btn-view">구경하기</span>
+                </div>
+            </a>
         </div>
-
-        <div class="shots-title">Detail Cuts</div>
-        <div class="shots-grid">
-            <img src="angma_001.png" alt="Shot 1">
-            <img src="angma_002.png" alt="Shot 2">
-            <img src="angma_003.png" alt="Shot 3">
-            <img src="angma_004.png" alt="Shot 4">
-            </div>
     </div>
-
     <footer>&copy; 2024 JOOMOOL. All rights reserved.</footer>
 </body>
 </html>
