--- a/ippari_purple.html
+++ b/ippari_purple.html
@@ -3,80 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JOOMOOL - 작품 상세</title>
+    <title>JOOMOOL - 이빠리 Purple</title>
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.css" />
     <style>
         :root { --point-color: #39FF14; --bg-color: #ffffff; --text-main: #111111; --text-sub: #666666; }
         body { margin: 0; padding: 0; font-family: 'Pretendard', sans-serif; background-color: var(--bg-color); color: var(--text-main); line-height: 1.6; }
         
-        /* 헤더 스타일 (메인과 동일 유지) */
+        /* 헤더 스타일 - 메인과 동일하게 드롭다운 포함 */
         header { padding: 20px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; background: rgba(255, 255, 255, 0.9); backdrop-filter: blur(10px); z-index: 100; border-bottom: 1px solid #eee; }
         .logo { font-size: 1.5rem; font-weight: 900; text-decoration: none; color: inherit; }
-        nav { display: flex; align-items: center; }
-        nav a { color: var(--text-main); text-decoration: none; margin-left: 25px; font-size: 0.9rem; font-weight: 600; transition: color 0.3s; }
-        nav a:hover { color: var(--point-color); }
-        .insta-icon { width: 20px; vertical-align: middle; }
+        nav { display: flex; align-items: center; gap: 25px; }
+        .nav-item { position: relative; font-size: 0.9rem; font-weight: 600; }
+        .nav-item a { text-decoration: none; color: var(--text-main); transition: 0.3s; }
+        .nav-item a:hover { color: var(--point-color); }
+
+        /* 드롭다운 스타일 */
+        .dropdown { position: absolute; top: 100%; left: 50%; transform: translateX(-50%); background: #fff; border: 1px solid #eee; border-radius: 8px; min-width: 100px; padding: 10px 0; display: none; box-shadow: 0 5px 15px rgba(0,0,0,0.05); }
+        .dropdown a { display: block; padding: 8px 20px; font-size: 0.85rem; white-space: nowrap; }
+        .nav-item:hover .dropdown { display: block; }
+        .insta-icon { width: 18px; height: 18px; vertical-align: middle; }
 
         /* 상세 페이지 레이아웃 */
         .detail-container { padding: 60px 5%; max-width: 1000px; margin: 0 auto; }
-        
-        /* 상단 메인 이미지 */
         .main-visual { width: 100%; border-radius: 20px; overflow: hidden; margin-bottom: 40px; border: 1px solid #eee; }
         .main-visual img { width: 100%; display: block; }
-
-        /* 작품 정보 */
         .info-section { margin-bottom: 60px; text-align: center; }
         .info-section h1 { font-size: 2.5rem; margin-bottom: 10px; }
         .info-section p { color: var(--text-sub); font-size: 1.1rem; }
         .back-btn { display: inline-block; margin-top: 20px; padding: 10px 30px; background: #000; color: #fff; text-decoration: none; border-radius: 50px; font-weight: 600; transition: 0.3s; }
         .back-btn:hover { background: var(--point-color); color: #000; }
-
-        /* 하단 스틸컷 그리드 */
         .shots-title { font-size: 1.2rem; font-weight: 700; margin-bottom: 20px; display: flex; align-items: center; gap: 10px; }
         .shots-title::before { content: ""; width: 20px; height: 4px; background: var(--point-color); }
         .shots-grid { display: grid; grid-template-columns: repeat(2, 1fr); gap: 20px; }
         .shots-grid img { width: 100%; border-radius: 15px; border: 1px solid #eee; }
-
         footer { text-align: center; padding: 60px; color: #bbb; font-size: 0.8rem; }
 
-        /* 모바일 대응 */
-        @media (max-width: 768px) {
-            .shots-grid { grid-template-columns: 1fr; }
-            .info-section h1 { font-size: 1.8rem; }
-        }
+        @media (max-width: 768px) { .shots-grid { grid-template-columns: 1fr; } .info-section h1 { font-size: 1.8rem; } }
     </style>
 </head>
 <body>
     <header>
         <a href="index.html" class="logo">JOOMOOL</a>
         <nav>
-            <a href="index.html#portfolio">PORTFOLIO</a>
-            <a href="about.html">ABOUT</a>
-            <a href="contact.html">CONTACT</a>
-            <a href="https://instagram.com/joomool_joo" target="_blank">
-                <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram" class="insta-icon">
-            </a>
+            <div class="nav-item">
+                <a href="#">CHARACTER</a>
+                <div class="dropdown">
+                    <a href="char_ippari.html">ippari</a>
+                    <a href="char_angma.html">angma</a>
+                </div>
+            </div>
+            <div class="nav-item"><a href="about.html">ABOUT</a></div>
+            <div class="nav-item"><a href="contact.html">CONTACT</a></div>
+            <div class="nav-item"><a href="index.html#portfolio">PORTFOLIO</a></div>
+            <div class="nav-item">
+                <a href="https://instagram.com/joomool_joo" target="_blank">
+                    <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram" class="insta-icon">
+                </a>
+            </div>
         </nav>
     </header>
 
     <div class="detail-container">
         <div class="main-visual">
-            <img src="ippari001.png" alt="Main Shot"> </div>
+            <img src="ippari002_01.png" alt="이빠리 Purple & Gold"> 
+        </div>
 
         <div class="info-section">
-            <h1>이빠리 Black</h1> <p>Vinyl Mixed Media | 2024</p>
+            <h1>이빠리 Purple & Gold</h1> 
+            <p>Resin, acrylic | 2025</p>
             <a href="index.html" class="back-btn">목록으로 돌아가기</a>
         </div>
 
         <div class="shots-title">Detail Cuts</div>
         <div class="shots-grid">
-            <img src="angma_001.png" alt="Shot 1">
-            <img src="angma_002.png" alt="Shot 2">
-            <img src="angma_003.png" alt="Shot 3">
-            <img src="angma_004.png" alt="Shot 4">
+            <img src="ippari002_01.png" alt="Detail 1">
+            <img src="ippari002_02.png" alt="Detail 2">
             </div>
     </div>
 
-    <footer>&copy; 2024 JOOMOOL. All rights reserved.</footer>
+    <footer>&copy; 2025 JOOMOOL. All rights reserved.</footer>
 </body>
 </html>
