--- a/angma_red.html
+++ b/angma_red.html
@@ -65,7 +65,7 @@
 
     <div class="detail-container">
         <div class="main-visual">
-            <img src="iangma_001.png" alt="앙마 Red"> 
+            <img src="angma_001.png" alt="앙마 Red"> 
         </div>
 
         <div class="info-section">
